// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering a file field 1`] = `
<div>
  {"type":"file","value":""}
</div>
`;

exports[`Rendering an color field 1`] = `
<div>
  {"type":"color","value":""}
</div>
`;

exports[`Rendering an image field 1`] = `
<div>
  {"type":"image","value":""}
</div>
`;

exports[`Rendering field with a parse 1`] = `
<div>
  {"type":"string","value":{"name":"foo"}}
</div>
`;

exports[`Rendering options that is a list filter 1`] = `
<div>
  {"type":"listfilter","value":"","options":["foo"]}
</div>
`;

exports[`Rendering options that is not a list filter 1`] = `
<div>
  {"type":"select","value":"","options":["foo"]}
</div>
`;

exports[`Rendering text field 1`] = `
<div>
  {"type":"string","value":""}
</div>
`;
